# fusecode-book-catalog

./: README.md  books.db  main.py  pyproject.toml  pytest.ini
app/: __init__.py  crud.py  database.py  models.py  routers.py
app/schemas/: __init__.py  response.py  schemas.py
tests/: TESTING.md  conftest.py  test_api.py  test_crud.py
