[project]
name = "fusecode-book-catalog"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "fastapi-cli>=0.0.8",
    "fastapi-slim>=0.116.1",
    "sqlalchemy>=2.0.41",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.4",
]
